--- a/ch20/login/login.html
+++ b/ch20/login/login.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-    <title>uploadFile</title>
+    <title>login</title>
 </head>
 <body>
-    <form action="http://127.0.0.1:8080/upload" method="post" enctype="multipart/form-data">
-        头像:<input type="file" name="file"><br/>
-        多图:<input type="file" name="files" multiple><br/>
-        <input type="submit" value="提交">
+    <form action="http://127.0.0.1:8080/loginForm" method="post" enctype="multipart/form-data">
+        用户名:<input type="text" name="username"><br/>
+        密  码:<input type="password" name="password"><br/>
+        <input type="submit" value="登陆">
     </form>
 </body>
 </html>
